# chainnft

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: package-lock.json  package.json
backend/src/: server.ts
backend/src/controllers/: apiController.ts
backend/src/models/: Activity.ts  Listing.ts  NFT.ts
backend/src/routes/: api.ts
backend/src/services/: indexer.ts
contracts/: Cargo.toml  marketplace_id.txt  nft_id.txt  splitter_id.txt
contracts/marketplace/src/: lib.rs
contracts/nft/src/: lib.rs
frontend/: package-lock.json
frontend/src/pages/: Activity.tsx  Home.tsx
frontend/src/utils/: soroban.ts
