[workspace]
resolver = "2"
members = [
    "nft",
    "royalty_splitter",
    "marketplace",
]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = false
panic = "abort"
# incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
soroban-sdk = "22.0.0"
